Code Smells removed, only System.out